fix: fix z-index when expand editableInput

--- a/apps/entry-app/src/app/components/agents/agent/agent.module.scss
+++ b/apps/entry-app/src/app/components/agents/agent/agent.module.scss
@@ -54,6 +54,10 @@
     height: 30px;
     position: relative;
     z-index: 1;
+
+    &-expanded {
+      z-index: 2;
+    }
   }
 
   &-delete-btn-container {
